// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";
package business.service.store.v1;
option go_package = "v1";

message StoreListReq{
    int64 dealer_id = 1; // 经销商id
    int64 brand_id = 2; // 品牌id
    int64 city_code = 3; // 城市代码
    int64 district_id = 4; // 街区id
    string location = 5; // 定位
    int64 tag_id = 6; // 分类id
    int32 order = 7; // 排序
    int32 page = 8;
    int32 page_size = 9;
}

message StoreDetailReq{
    int64 store_id = 1;
    string location = 2;
}

message FuzzySearchStoreReq{
    string query = 1;
    int32 isHighlight = 2;
    int32 order = 3; // 排序
    int32 page = 4;
    int32 page_size = 5;
}

message EditStoreReq{
    int64 Id = 1;
    string title = 2;
    int32 type = 3;
    int32 level = 4;
    string cover = 5;
    string images = 6;
    string videos = 7;
    string brand_ids = 8;
    string dealer_ids = 9;
    string gaode_id = 10;
    int64 province_code = 11;
    int64 city_code = 12;
    int64 area_code = 13;
    int32 source = 14;
    string tag_ids = 15;
    string address = 16;
    string tel = 17;
    string gcj_02 = 18;
    string location = 19;
    int64 district_id = 20;
    string wechat = 21;
    string introduction = 23;
    string brand_names = 24;
    string styles = 25;
    string products = 26;
    string price_descs = 27;
    string business_time = 28;
}

message DeleteStoreReq{
    int64 store_id = 1;
}

